Add authorization framework
